# 2FAzz

./: .gitignore  Cargo.toml
.github/workflows/: build.yml
android/: settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/res/values/: strings.xml  styles.xml
src/: app.rs  import.rs  lib.rs  main.rs  passkey.rs  password.rs  storage.rs  theme.rs  totp.rs
src/ui/: add_token.rs  import_ui.rs  mod.rs  passkey_ui.rs  password_ui.rs  settings_ui.rs  style.rs  tokens.rs
