[package]
name = "authenticator"
version = "0.1.0"
edition = "2021"

[lib]
name = "authenticator"
crate-type = ["cdylib", "rlib"]

[dependencies]
eframe = { version = "0.30", default-features = false, features = [
    "default_fonts",
    "glow",
    "android-native-activity",
    "persistence",
    "x11",
    "wayland",
] }
egui = "0.30"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
aes-gcm = "0.10"
pbkdf2 = "0.12"
sha2 = "0.10"
hmac = "0.12"
sha1 = "0.10"
base32 = "0.5"
rand = "0.8"
log = "0.4"

[target.'cfg(target_os = "android")'.dependencies]
winit = { version = "0.30", default-features = false, features = ["android-native-activity", "rwh_06"] }

[target.'cfg(not(target_os = "android"))'.dependencies]
env_logger = "0.11"
