[package]
name = "authenticator"
version = "0.1.0"
edition = "2021"
resolver = "2"

[lib]
name = "authenticator"
crate-type = ["cdylib", "rlib"]

[dependencies]
eframe = "0.30"
egui = "0.30"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
aes-gcm = "0.10"
pbkdf2 = "0.12"
sha2 = "0.10"
hmac = "0.12"
sha1 = "0.10"
base32 = "0.5"
rand = "0.8"
log = "0.4"

[target.'cfg(not(target_os = "android"))'.dependencies]
env_logger = "0.11"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true